docs: add JLink optimization documentation
- Update docs/zh/deployment/docker.md - Add JLink image info
- Update docs/zh/deployment/docker-optimized.md - Add JLink technical notes
- Update docs/en/deployment/docker.md - Add JLink image info
- Update docs/en/deployment/docker-optimized.md - Add JLink technical notes

Changes:
- Added JLink image type to image comparison tables
- Documented JLink optimization approach and limitations
- Explained Spring Boot 3.x module compatibility issues
- Updated version info to 1.2.0 (2df197d)

Image types now documented:
- Optimized: 281MB (recommended)
- JLink: 281MB (experimental)
- Standard: 440MB

Co-authored-by: Qwen-Coder <qwen-coder@alibabacloud.com>