@@ -1,9 +1,9 @@
 # Docker 镜像优化指南
 
 <!-- 版本信息 -->
-> **文档版本**: 1.0.0
+> **文档版本**: 1.1.0
 > **最后更新**: 2026-04-16
-> **Git 提交**: 803dcd0
+> **Git 提交**: f58f0e0
 > **作者**: Lincoln
 <!-- /版本信息 -->
 
@@ -11,11 +11,18 @@
 
 JAiRouter 提供优化的 Docker 镜像构建方案，通过多阶段构建和 Alpine 基础镜像，将镜像体积从 440MB 降至 **281MB**（减少 36%）。
 
+### JLink 优化方案说明
+
+> **注意**：JLink 方案尝试使用 `jlink` 工具定制精简 JRE 模块，但由于 Spring Boot 3.x 的模块兼容性问题，最终采用 Alpine JRE + 多阶段构建 + JVM 参数优化的方案。
+> 
+> JLink 版镜像 (`Dockerfile.jlink`) 与优化版 (`Dockerfile.optimized`) 大小相同（281MB），作为实验性方案提供，供有特殊需求的用户参考。
+
 ## 镜像对比
 
 | 镜像类型 | Dockerfile | 大小 | 基础镜像 | 构建方式 | 推荐度 |
 |----------|-----------|------|----------|----------|--------|
 | **优化版** | `Dockerfile.optimized` | **281MB** | `eclipse-temurin:17-jre-alpine` | 多阶段 + layertools | ⭐⭐⭐⭐⭐ |
+| **JLink 版** | `Dockerfile.jlink` | **281MB** | `eclipse-temurin:17-jre-alpine` | 多阶段 + JVM 优化 | 🔬实验性 |
 | 标准版 | `Dockerfile` | 440MB | `eclipse-temurin:17-jre` | 单阶段 | ⭐⭐⭐ |
 
 ## 优化技术
@@ -84,26 +91,57 @@ java -Djarmode=layertools -jar app.jar extract --destination extracted
 针对容器环境优化的 JVM 参数：
 
 ```bash
-# 优化版
--Xms256m -Xmx512m -XX:+UseG1GC -XX:+UseContainerSupport -XX:MaxRAMPercentage=75.0
+# 优化版/JLink 版
+-Xms128m -Xmx256m -XX:+UseG1GC -XX:+UseContainerSupport -XX:MaxRAMPercentage=75.0
 
 # 标准版
 -Xms512m -Xmx1024m -XX:+UseG1GC -XX:+UseContainerSupport -XX:MaxRAMPercentage=75.0
 ```
 
 **优化点**：
-- 更小的初始堆内存（256MB vs 512MB）
-- 更小的最大堆内存（512MB vs 1024MB）
+- 更小的初始堆内存（128MB vs 512MB）
+- 更小的最大堆内存（256MB vs 1024MB）
 - 启用容器感知（`UseContainerSupport`）
 - 基于百分比的内存限制（`MaxRAMPercentage`）
+
+### 5. JLink 定制 JRE（实验性）
+
+尝试使用 `jlink` 工具创建定制 JRE：
+
+```dockerfile
+# 阶段 2: 创建 jlink 定制 JRE
+FROM eclipse-temurin:17-jdk-alpine AS jlink-create
+
+RUN /opt/java/openjdk/bin/jlink \
+    --add-modules ALL-MODULE-PATH \
+    --compress=2 \
+    --no-header-files \
+    --no-man-pages \
+    --strip-debug \
+    --output /jlink-runtime
+```
+
+**技术说明**：
+- ⚠️ Spring Boot 3.x 使用模块化系统，需要完整的 JRE 模块
+- ⚠️ 尝试精简模块会导致 `ClassNotFoundException` 等兼容性问题
+- ✅ 最终方案：Alpine JRE + 多阶段构建 + JVM 参数优化
+- 📊 镜像大小：281MB（与优化版相同）
+
+**JLink 版适用场景**：
+- 需要进一步定制 JRE 模块的高级用户
+- 愿意承担兼容性风险以换取潜在优化的场景
+- 作为技术参考和实验用途
 
 ## 构建优化镜像
 
 ### 使用构建脚本（推荐）
 
 ```bash
-# 构建优化版镜像
+# 构建优化版镜像（推荐）
 ./scripts/build/docker-build.sh optimized
+
+# 构建 JLink 版镜像（实验性）
+./scripts/build/docker-build.sh jlink
 
 # 构建标准版镜像
 ./scripts/build/docker-build.sh standard
@@ -175,6 +213,7 @@ docker images sodlinken/jairouter
 # 输出示例
 REPOSITORY            TAG               SIZE
 sodlinken/jairouter   latest-optimized  281MB
+sodlinken/jairouter   latest-jlink      281MB
 sodlinken/jairouter   latest            440MB
 ```
 
@@ -311,6 +350,11 @@ docker exec jairouter java -XX:+PrintFlagsFinal -version
 - **[Docker 部署指南](docker.md)** - 详细的 Docker 部署说明
 - **[生产环境部署](production.md)** - 生产环境配置最佳实践
 - **[监控指南](../monitoring/index.md)** - 设置监控和告警
+
+## 相关文档
+
+- [JLink 技术说明](#5-jlink-定制-jre实验性) - JLink 优化方案详细解释
+- [构建脚本使用](../../scripts/build/README.md) - 构建脚本完整说明
 
 <!-- 版本信息 -->
 > **文档版本**: 1.0.0
